--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,17 +27,16 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run linting
-      run: npm run lint --if-present
-      
     - name: Run tests
       run: npm run test:ci
       
     - name: Generate test coverage
-      run: npm run test:coverage --if-present
+      run: npm run test:coverage
+      continue-on-error: true
       
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
+      if: matrix.node-version == '20.x'
       with:
         file: ./coverage/lcov.info
         flags: unittests
@@ -62,10 +61,10 @@ jobs:
       run: npm ci
       
     - name: Build application
-      run: npm run build --if-present
+      run: npm run build
       
     - name: Build for production
-      run: npm run build:prod --if-present
+      run: npm run build:prod
       
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
@@ -73,38 +72,6 @@ jobs:
         name: build-files
         path: dist/
         retention-days: 30
-
-  e2e-tests:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Install Playwright
-      run: npx playwright install --with-deps
-      
-    - name: Run E2E tests
-      run: npm run e2e --if-present
-      
-    - name: Upload E2E test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: e2e-results
-        path: e2e-results/
-        retention-days: 7
 
   security-scan:
     runs-on: ubuntu-latest
@@ -124,9 +91,6 @@ jobs:
       
     - name: Run security audit
       run: npm audit --audit-level=moderate
-      
-    - name: Run dependency vulnerability scan
-      run: npx audit-ci --moderate
       continue-on-error: true
 
   deploy:
@@ -148,14 +112,14 @@ jobs:
       run: npm ci
       
     - name: Build for production
-      run: npm run build:prod --if-present || npm run build -- --configuration production
+      run: npm run build:prod
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       if: success()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist/componenttesting-ex
+        publish_dir: ./dist/componenttesting_ex
         publish_branch: gh-pages
         
   notify:
@@ -179,4 +143,3 @@ jobs:
         echo "Tests: ${{ needs.test.result }}"
         echo "Build: ${{ needs.build.result }}"
         echo "Deploy: ${{ needs.deploy.result }}"
-        exit 1
