--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,12 +37,12 @@ jobs:
     - name: Build Angular application
       run: |
         # Build for production with base href for GitHub Pages
-        npm run build -- --configuration production --base-href "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+        npm run build:prod -- --base-href "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
         
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: ./dist/componenttesting-ex
+        path: ./dist/componenttesting_ex
 
   deploy:
     environment:
