--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -29,36 +29,11 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Check PR title
-      uses: amannn/action-semantic-pull-request@v5
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        types: |
-          feat
-          fix
-          docs
-          style
-          refactor
-          test
-          chore
-          ci
-        scopes: |
-          component
-          service
-          ui
-          api
-          deps
-        requireScope: false
-        
     - name: Run tests
-      run: npm run test:ci --if-present || npm run test -- --watch=false --browsers=ChromeHeadless
-      
-    - name: Run linting
-      run: npm run lint --if-present
+      run: npm run test:ci
       
     - name: Build application
-      run: npm run build --if-present
+      run: npm run build
       
     - name: Check for merge conflicts
       run: |
@@ -84,7 +59,7 @@ jobs:
       run: npm ci
       
     - name: Build base
-      run: npm run build -- --configuration production
+      run: npm run build:prod
       
     - name: Store base size
       run: |
@@ -103,7 +78,7 @@ jobs:
       run: npm ci
       
     - name: Build PR
-      run: npm run build -- --configuration production
+      run: npm run build:prod
       
     - name: Compare sizes
       run: |
@@ -146,7 +121,7 @@ jobs:
       run: npm ci
       
     - name: Run tests with coverage
-      run: npm run test:coverage --if-present || npm run test -- --code-coverage --watch=false --browsers=ChromeHeadless
+      run: npm run test:coverage
       
     - name: Coverage comment
       uses: romeovs/lcov-reporter-action@v0.3.1
@@ -154,16 +129,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         lcov-file: ./coverage/lcov.info
         delete-old-comments: true
-
-  auto-assign:
-    runs-on: ubuntu-latest
-    if: github.event.action == 'opened'
-    
-    steps:
-    - name: Auto-assign PR
-      uses: kentaro-m/auto-assign-action@v1.2.5
-      with:
-        configuration-path: '.github/auto-assign.yml'
+      continue-on-error: true
 
   labeling:
     runs-on: ubuntu-latest
@@ -178,6 +144,7 @@ jobs:
       with:
         configuration-path: '.github/labeler.yml'
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+      continue-on-error: true
 
   conflict-check:
     runs-on: ubuntu-latest
@@ -206,25 +173,3 @@ jobs:
           echo "✅ No merge conflicts detected"
           git merge --abort
         fi
-
-  security-check:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == false
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
